[package]
name = "slink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# We need this for seedlink url parsing
url = "2.4"

# This is a dependency that already exists in url
percent-encoding = "2.3"

anyhow = "1.0"
bytes = { version = "1", features = ["serde"] }
clap = { version = "4.2", features = ["derive"] }
daemonize = "0.5"
env_logger = "0.9.0"
futures = "0.3"
log = "0.4"
mseed = "0.6"
nix = "0.26"
pin-project-lite = "0.2"
quick-xml = { version = "0.29", features = ["async-tokio", "serialize"] }
redis = { version = "0.23.0", features = ["streams"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
time = { version="0.3.20", features = ["macros", "formatting", "parsing", "serde"] }
tokio = { version = "1.27.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["time"]}
tokio-util = { version = "0.7.7", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
pretty_assertions = "1.4"
