[package]
name = "slink-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
bytes = "1.5.0"
futures = "0.3.28"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slink = { path = ".." }
socket2 = "0.5.4"
thiserror = "1.0"
time = "0.3"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = { version = "0.7.9", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
pretty_assertions = "1"
tracing-subscriber = "0.3"
